[lesson3] Expading the initial matrices and adding 'current frame' to most transformations for clarification.

--- a/basic_lessons/lesson3_tutorial.ipynb
+++ b/basic_lessons/lesson3_tutorial.ipynb
@@ -112,17 +112,19 @@
     "\n",
     "As shown in the figure, there are four transformations for this robot, taking us from the base, $\\mathcal{F}_0$, to the end-effector, $\\mathcal{F}_2$. The sequence can be summarised as follows.\n",
     "\n",
-    "1. A rotation by $q_0$, from $\\mathcal{F}_0$ to $\\mathcal{F}_{0'}$.\n",
-    "2. A translation of $l_0$ along the $x$-axis of the previous frame, from $\\mathcal{F}_{0'}$ to $\\mathcal{F}_{1}$.\n",
-    "3. A rotation by $q_1$, from $\\mathcal{F}_{1}$ to $\\mathcal{F}_{1'}$.\n",
-    "4. A translation of $l_1$ along the $x$-axis of the previous frame, from $\\mathcal{F}_{1'}$ to $\\mathcal{F}_{2}$.\n",
+    "1. A rotation of $q_0$ about the current frame, from $\\mathcal{F}_0$ to $\\mathcal{F}_{0'}$.\n",
+    "2. A translation of $l_0$ along the $x$-axis of the current frame, from $\\mathcal{F}_{0'}$ to $\\mathcal{F}_{1}$.\n",
+    "3. A rotation of $q_1$ about the current frame, from $\\mathcal{F}_{1}$ to $\\mathcal{F}_{1'}$.\n",
+    "4. A translation of $l_1$ along the $x$-axis of the current frame, from $\\mathcal{F}_{1'}$ to $\\mathcal{F}_{2}$.\n",
     "\n",
     "### 1. From $\\mathcal{F}_0$ to $\\mathcal{F}_{0'}$\n",
     "\n",
     "We start with the rotation that can be described by the following homogenous transformation matrix.\n",
     "\n",
-    "$$\\myvec H_{0'}^{0}\\left(q_0\\right)\t=\\begin{bmatrix}\\mymatrix R\\left(q_0\\right) & 0\\\\\n",
-    "\\myvec 0 & 1\n",
+    "$$\\myvec H_{0'}^{0}\\left(q_0\\right)\t=\n",
+    "\\begin{bmatrix} \\cos(q_0) & -\\sin(q_0) & 0\\\\\n",
+    "\\sin(q_0) & \\cos(q_0)  & 0\\\\\n",
+    "0               & 0                & 1\n",
     "\\end{bmatrix}.$$\n",
     "\n",
     "Programmatically, supposing that $q_0 = \\frac{\\pi}{4}$, we arrive at the following piece of code."
@@ -153,10 +155,11 @@
     "\n",
     "The second step is a translation that can be described by the following homogenous transformation matrix.\n",
     "\n",
-    "$$\\myvec H_{1}^{0'}\\left(l_0\\right)\t=\\begin{bmatrix}\\mymatrix I & \\begin{bmatrix}l_0\\\\\n",
-    "0\n",
-    "\\end{bmatrix}\\\\\n",
-    "\\myvec 0 & 1\n",
+    "$$\\myvec H_{1}^{0'}\\left(l_0\\right)\t=\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & l_0 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & 1\n",
     "\\end{bmatrix}.$$\n",
     "\n",
     "Programmatically, supposing that $l_0 = 0.3$, we arrive at the following piece of code."
@@ -185,8 +188,10 @@
     "\n",
     "The third step is a rotation that can be described by the following homogenous transformation matrix.\n",
     "\n",
-    "$$\\myvec H_{1'}^{1}\\left(q_1\\right)\t=\\begin{bmatrix}\\mymatrix R\\left(q_1\\right) & 0\\\\\n",
-    "\\myvec 0 & 1\n",
+    "$$\\myvec H_{1'}^{1}\\left(q_1\\right)\t=\n",
+    "\\begin{bmatrix} \\cos(q_1) & -\\sin(q_1) & 0\\\\\n",
+    "\\sin(q_1) & \\cos(q_1)  & 0\\\\\n",
+    "0               & 0                & 1\n",
     "\\end{bmatrix}.$$\n",
     "\n",
     "Programmatically, supposing that $q_1 = -\\frac{\\pi}{14}$, we arrive at the following piece of code."
@@ -215,10 +220,11 @@
     "\n",
     "The last step is a translation that can be described by the following homogenous transformation matrix.\n",
     "\n",
-    "$$\\myvec H_{2}^{1'}\\left(l_1\\right)\t=\\begin{bmatrix}\\mymatrix I & \\begin{bmatrix}l_1\\\\\n",
-    "0\n",
-    "\\end{bmatrix}\\\\\n",
-    "\\myvec 0 & 1\n",
+    "$$\\myvec H_{2}^{1'}\\left(l_1\\right)\t=\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & l_1 \\\\\n",
+    "0 & 1 & 0 \\\\\n",
+    "0 & 0 & 1\n",
     "\\end{bmatrix}.$$\n",
     "\n",
     "Programmatically, supposing that $l_1 = 0.95$, we arrive at the following piece of code."
@@ -292,10 +298,10 @@
     "\n",
     "Each joint transformation is represented by a row. The transformations of each row will be done in the following sequence.\n",
     "\n",
-    "1. A rotation about the $z$-axis, related to column $\\theta$.\n",
-    "2. A translation about the $z$-axis, related to column $d$.\n",
-    "3. A translation about the $x$-axis, related to column $a$.\n",
-    "4. A rotation about the $x$-axis, related to column $\\alpha$.\n",
+    "1. A rotation about the $z$-axis of the current frame, related to column $\\theta$.\n",
+    "2. A translation about the $z$-axis of the current frame, related to column $d$.\n",
+    "3. A translation about the $x$-axis of the current frame, related to column $a$.\n",
+    "4. A rotation about the $x$-axis of the current frame, related to column $\\alpha$.\n",
     "\n",
     "Note that the sequence of transformations in the table represent the same FKM of our RR robot derived previously. The only difference is that the result will be an element of SE(3).\n",
     "\n",
@@ -311,9 +317,9 @@
     "| 1     | 0        | $q_{B1}(t)$ | 0   | 0               |\n",
     "\n",
     "Given that we can ignore any cells with zeros, this robot will be composed of three transformations.\n",
-    "1. A translation of $q_{B0}(t)$ along the $z$-axis, from $\\mathcal{F}_{B0}$ to $\\mathcal{F}_{B0'}$.\n",
-    "2. A rotation of $\\frac{\\pi}{2}$ about the $x$-axis, from $\\mathcal{F}_{B0'}$ to $\\mathcal{F}_{B1}$.\n",
-    "3. A translation of $q_{B1}(t)$ along the $z$-axis, from $\\mathcal{F}_{B1}$ to $\\mathcal{F}_{B2}$.\n",
+    "1. A translation of $q_{B0}(t)$ along the $z$-axis of the current frame, from $\\mathcal{F}_{B0}$ to $\\mathcal{F}_{B0'}$.\n",
+    "2. A rotation of $\\frac{\\pi}{2}$ about the $x$-axis of the current frame, from $\\mathcal{F}_{B0'}$ to $\\mathcal{F}_{B1}$.\n",
+    "3. A translation of $q_{B1}(t)$ along the $z$-axis of the current frame, from $\\mathcal{F}_{B1}$ to $\\mathcal{F}_{B2}$.\n",
     "\n",
     "## FKM for the PP robot\n",
     "\n",
