[lesson2] Fixed typos.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -846,7 +846,7 @@
    "source": [
     "## Exercise d\n",
     "\n",
-    "Consider the same variables as in `Exercise c` by replacing the subscripts with `d`. Calculate, instead, the rotation followed by the translation. Store the result in the variable `H_d` shown in the cell below.\n",
+    "Consider the same variables as in `Exercise c` by replacing the subscripts with `d`. Calculate, instead, the translation followed by the rotation. Store the result in the variable `H_d` shown in the cell below.\n",
     "\n",
     "Is `H_c` the same as `H_d`? What does that indicate?"
    ]
@@ -877,7 +877,7 @@
     "1. Let a rotation represented by a SO(2) element have a time-varying angle of $\\theta(t) = \\sin(t) + 2\\cos(t)$.\n",
     "    - Write down its general form in SO(2) so that all four elements are clearly visible.\n",
     "    - Using this written down solution, compute the SO(2) representation at $t=10$.\n",
-    "2. Using SO(3) elements, calculate the final rigid body motion after four sequential transformations.\n",
+    "2. Using SE(3) elements, calculate the final rigid body motion after four sequential transformations.\n",
     "    - The first transformation is a rotation of $\\theta=\\frac{\\pi}{10}$ about the $z$-axis of the _World_ frame.\n",
     "    - The second transformation is a translation of $d=0.3$ about the $z$-axis of the _current_ frame.\n",
     "    - The third transformation is a translation of $a=0.5$ about the $x$-axis of the _current_ frame.\n",
