[lesson2] Using x,y,z coordinates.

--- a/basic_lessons/lesson2_tutorial.ipynb
+++ b/basic_lessons/lesson2_tutorial.ipynb
@@ -636,16 +636,18 @@
    },
    "source": [
     "# An SE(3) translation\n",
-    "x = 1\n",
-    "y = 2\n",
-    "z = 3\n",
-    "H0_a =  np.array([[1, 0, 0, 1],\n",
-    "                  [0, 1, 0, 2],\n",
-    "                  [0, 0, 1, 3],\n",
+    "x = 1 # distance in metres\n",
+    "y = 2 # distance in metres\n",
+    "z = 3 # distance in metres\n",
+    "\n",
+    "H0_a =  np.array([[1, 0, 0, x],\n",
+    "                  [0, 1, 0, y],\n",
+    "                  [0, 0, 1, z],\n",
     "                  [0, 0, 0, 1]])\n",
     "\n",
     "# An SE(3) rotation\n",
-    "θab = pi/4\n",
+    "θab = pi/4 # angle in radians\n",
+    "\n",
     "Ha_b = np.array([[cos(θab), -sin(θab), 0,  0],\n",
     "                 [sin(θab),  cos(θab), 0,  0],\n",
     "                 [0,         0,        1,  0],\n",
