[L2] Adding challenge answers.

--- a/basic_lessons/lesson2_exercise_answers.ipynb
+++ b/basic_lessons/lesson2_exercise_answers.ipynb
@@ -227,6 +227,79 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "`H_c` is *not* the same as `H_d`. This indicates that the order of operations matter. That is, sequential pose transformations are not commutative."
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Extra challenge 1\n",
+    "\n",
+    "$$R = \\left[\\begin{array}{cc}\n",
+    "             \\cos\\left(\\sin(t) + 2\\cos(t)\\right) & -\\sin\\left(\\sin(t) + 2\\cos(t)\\right) \\\\\n",
+    "             \\sin\\left(\\sin(t) + 2\\cos(t)\\right) & \\cos\\left(\\sin(t) + 2\\cos(t)\\right)\n",
+    "        \\end{array}\\right].$$"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "t = 10.0\n",
+    "\n",
+    "θ = sin(t) + 2 * cos(t)\n",
+    "\n",
+    "R = np.array([[cos(θ),-sin(θ)],\n",
+    "              [sin(θ), cos(θ)]])"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Extra challenge 2\n"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "θ = pi/10.0\n",
+    "d = 0.3\n",
+    "a = 0.5\n",
+    "α = -pi/2.0\n",
+    "\n",
+    "H1 = np.array(\n",
+    "    [[cos(θ), -sin(θ), 0, 0],\n",
+    "    [ sin(θ),  cos(θ), 0, 0],\n",
+    "    [ 0,       0,      1, 0],\n",
+    "    [ 0,       0,      0, 1]]\n",
+    ")\n",
+    "\n",
+    "H2 = np.array(\n",
+    "    [[1, 0, 0, 0],\n",
+    "     [0, 1, 0, 0],\n",
+    "     [0, 0, 1, d],\n",
+    "     [0, 0, 0, 1]]\n",
+    ")\n",
+    "\n",
+    "H3 = np.array(\n",
+    "    [[1, 0, 0, a],\n",
+    "     [0, 1, 0, 0],\n",
+    "     [0, 0, 1, 0],\n",
+    "     [0, 0, 0, 1]]\n",
+    ")\n",
+    "\n",
+    "H4 = np.array(\n",
+    "    [[1, 0,       0,      0],\n",
+    "     [0, cos(α), -sin(α), 0],\n",
+    "     [0, sin(α),  cos(α), 0],\n",
+    "     [0, 0,       0,      1]]\n",
+    ")\n",
+    "\n",
+    "H = H1 @ H2 @ H3 @ H4"
+   ]
   }
  ],
  "metadata": {
