[L3] Adding answer to the challenge.

--- a/basic_lessons/lesson3_exercise_answers.ipynb
+++ b/basic_lessons/lesson3_exercise_answers.ipynb
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-30T15:13:23.077940Z",
-     "start_time": "2026-01-30T15:13:23.058560Z"
+     "end_time": "2026-02-12T21:25:39.074771Z",
+     "start_time": "2026-02-12T21:25:39.051298Z"
     }
    },
    "cell_type": "code",
@@ -56,7 +56,7 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -70,8 +70,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-30T15:13:23.100476Z",
-     "start_time": "2026-01-30T15:13:23.078887Z"
+     "end_time": "2026-02-12T21:25:39.097015Z",
+     "start_time": "2026-02-12T21:25:39.084247Z"
     }
    },
    "cell_type": "code",
@@ -125,7 +125,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -135,8 +135,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-01-30T15:13:23.113101Z",
-     "start_time": "2026-01-30T15:13:23.101394Z"
+     "end_time": "2026-02-12T21:25:39.108167Z",
+     "start_time": "2026-02-12T21:25:39.097442Z"
     }
    },
    "cell_type": "code",
@@ -174,7 +174,60 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Challenge 1\n"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-12T21:25:39.129035Z",
+     "start_time": "2026-02-12T21:25:39.111132Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Consider manipulator DoFs as the length of the following lists.\n",
+    "# Consider it as the configuration space of the RRR...RRR robot\n",
+    "q = [pi/2, pi/10, -pi/10, pi/2] # Increase length of q if you'd like to check\n",
+    "l = [1, 2, 3, 4] # l must be same size of q\n",
+    "\n",
+    "if len(q) != len(l):\n",
+    "    raise Exception(\"q and l are not the same length\")\n",
+    "\n",
+    "def link_rotation(qi):\n",
+    "    return np.array(\n",
+    "            [[cos(qi), -sin(qi),  0],\n",
+    "             [sin(qi),  cos(qi),  0],\n",
+    "             [0,         0,       1]])\n",
+    "\n",
+    "def link_translation(li):\n",
+    "    return np.array(\n",
+    "            [[1, 0, li],\n",
+    "             [0, 1, 0],\n",
+    "             [0, 0, 1]])\n",
+    "\n",
+    "for qi, li in zip(q, l):\n",
+    "    H = link_rotation(qi) @ link_translation(li)\n",
+    "\n",
+    "# Printing the result is NOT a mandatory part of the answer.\n",
+    "print(f\"Final answer is {H}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final answer is [[ 6.1232340e-17 -1.0000000e+00  2.4492936e-16]\n",
+      " [ 1.0000000e+00  6.1232340e-17  4.0000000e+00]\n",
+      " [ 0.0000000e+00  0.0000000e+00  1.0000000e+00]]\n"
+     ]
+    }
+   ],
+   "execution_count": 16
   }
  ],
  "metadata": {
