[L2] Added short note to answers.

--- a/basic_lessons/lesson2_exercise_answers.ipynb
+++ b/basic_lessons/lesson2_exercise_answers.ipynb
@@ -257,7 +257,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "# Extra challenge 2\n"
+   "source": [
+    "# Extra challenge 2\n",
+    "\n",
+    "See DH parameters in lesson 3."
+   ]
   },
   {
    "metadata": {},
