[L4] Adding more information to the introduction.

--- a/basic_lessons/lesson4_tutorial.ipynb
+++ b/basic_lessons/lesson4_tutorial.ipynb
@@ -43,14 +43,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-15T17:34:03.644281Z",
+     "start_time": "2026-02-15T17:34:01.946123Z"
+    }
+   },
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
     "%pip install numpy --break-system-packages"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -61,28 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "tags": [
      "imports"
-    ]
+    ],
+    "ExecuteTime": {
+     "end_time": "2026-02-15T17:34:03.653107Z",
+     "start_time": "2026-02-15T17:34:03.646863Z"
+    }
    },
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from math import pi, sin, cos"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Suggested exercises\n",
-    "\n",
-    "1. What about if the robot had 3 degrees-of-freedom, that is RRR?\n",
-    "2. What about if the robot had n degrees-of-freedom? Would it be much more complicated to solve?\n",
-    "3. What if the robot has one or more prismatic joints?"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "attachments": {
@@ -93,22 +91,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2 DoF planar robot (RR)\n",
+    "# Differential Kinematics Model (DFKM)\n",
+    "\n",
+    "As we have seen in the previous lesson, the FKM relates configuration-space position with task-space position. For a manipulator, inserting a valid set of joint configurations into the FKM leads to the task-space values of the end-effector.\n",
+    "\n",
+    "We also managed to systematise the process to find the FKM, using DH parameters. That way, the FKM of any serial-link manipulator  with any number of degrees-of-freedom can be defined with a table. From the table we can derive the analytical FKM and compute it efficiently.\n",
+    "\n",
+    "Although the FKM is, then, straightforward to compute, the _inverse_ FKM does not have a general closed form for manipulators with any number of degrees-of-freedom. Naturally, there are ways to invert the FKM iteratively using its first-order derivative. This is where the differential kinematics model (DFKM) comes into play.\n",
+    "\n",
+    "The DFKM is the process of finding Jacobians, because the FKM is a vector-valued function. It was once said that\n",
+    "\n",
+    "    \"Robotics is the art of finding Jacobians.\"\n",
+    "    Bruno Siciliano @ Rosenbrock Lecture Series 2024\n",
+    "\n",
+    "The importance of Jacobians for robotics cannot be overstated. In conclusion, the DFKM is a central process of robotics.\n",
+    "\n",
+    "Despite all the fancy words, it's a rather simple process for simple manipulators. Let's start with our usual toy example.\n",
     "\n",
     "![Lesson4.png](attachment:Lesson4.png)\n",
     "\n",
-    "For the 2-DoF planar robot shown in the figure, let $q_0\\triangleq q_0(t)$, $q_1\\triangleq q_1(t)$, $l_{0}$, $l_{1} \\in \\mathbb{R}$ be the parameters to calculate\n",
+    "For the 2-DoF planar robot shown in the figure, let us use the FKM obtained in the previous lesson. It is given as\n",
     "\n",
-    "$$\\mymatrix{H}^{0}_{2}( q_0, l_{0},q_1,l_{1}) \\in SE(2),$$\n",
+    "$$\\mymatrix{H}^{0}_{2}( q_0, l_{0},q_1,l_{1}) \\in SE(2).$$\n",
     "\n",
-    "that is, the forward kinematics model of the 2 DoF planar manipulator with configuration space given by \n",
+    "Also remember that the configuration space of this manipulator is\n",
     "\n",
     "$$\\myvec{q} = \\left[\\begin{array}{ccc}\n",
     "         q_0 \\\\\n",
     "         q_1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "1. Calculate the analytical Jacobian such that\n",
+    "The DFKM is the process of calculating a Jacobian relevant for a given task. Therefore, herein we obtain the Jacobian $\\mymatrix{J}\\left(\\myvec{q}\\right)$ such that\n",
     "\n",
     "$$\\dot{\\myvec{x}}=\\mymatrix{J} \\dot{\\myvec{q}}$$\n",
     "\n",
@@ -117,12 +130,12 @@
     "$$\\myvec{x} = \\left[\\begin{array}{ccc}\n",
     "         p_{x} \\\\\n",
     "         p_{y} \\\\\n",
-    "         \\phi_{z}\n",
+    "         \\phi\n",
     "        \\end{array}\\right],$$\n",
     "\n",
-    "in which $p_{x}$, $p_{y}$, and $\\phi_{z}$ are, respectively, the $x$-axis position, the $y$-axis position, and the $z$-axis angle of $\\mathcal{F}_{2}$. Notice that $\\dot{l}_{0}=\\dot{l}_{1}=0$. \n",
+    "in which $p_{x}$, $p_{y}$, and $\\phi$ are, respectively, the $x$-axis position, the $y$-axis position, and the rotation angle of $\\mathcal{F}_{2}$. Notice that $\\dot{l}_{0}=\\dot{l}_{1}=0$, because, as we defined in the previous lesson, they do not vary in time.\n",
     "\n",
-    "2. For the same values of $\\myvec{q}$, calculate $\\dot{\\myvec{x}}$ when \n",
+    "As defined above, the Jacobian $\\mymatrix{J}\\left(\\myvec{q}\\right)$ is a function of the configuration-space values. Therefore, when computing it, we need to know at what $\\myvec{q}$. Therefore, in this toy example, let us calculate $\\dot{\\myvec{x}}$ when\n",
     "\n",
     "$$\\dot{\\myvec{q}} = \\left[\\begin{array}{ccc}\n",
     "         5 \\\\\n",
@@ -138,9 +151,9 @@
     "\n",
     "## Step 1: Calculate the forward kinematics by hand\n",
     "\n",
-    "It is not possible to calculate the Jacobian without first deriving the forward kinematics model (FKM). \n",
+    "It is not possible to calculate the Jacobian without the FKM. \n",
     "\n",
-    "We saw how to do that in class, so here is the answer:\n",
+    "We saw how to do that in the previous lesson, so here is the answer for this robot.\n",
     "\n",
     "$$\\mymatrix{H}^{0}_{2} = \\left[\\begin{array}{ccc}\n",
     "         \\cos{(q_0 + q_1)} & -\\sin{(q_0 + q_1)} & l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}\\\\\n",
@@ -153,20 +166,20 @@
     "$$\\begin{align}\n",
     "p_{x}&=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
     "p_{y}&=l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)} \\\\\n",
-    "\\phi_{z}&=q_0 + q_1 .\\\\\n",
+    "\\phi&=q_0 + q_1 .\\\\\n",
     "\\end{align}$$\n",
     "        \n",
     "\n",
     "## Step 2: Calculate the differential kinematics by hand\n",
     "\n",
-    "We first calculate the Jacobian by hand, because programmatically there's nothing for you to do yet.\n",
+    "We first calculate the Jacobian by hand, because programmatically there's nothing for us to do yet.\n",
     "\n",
     "The analytical Jacobian is given by\n",
     "\n",
     "$$ \\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
     "         \\frac{\\partial p_{x}}{\\partial q_0}    & \\frac{\\partial p_{x}}{\\partial q_1} \\\\\n",
     "         \\frac{\\partial p_{y}}{\\partial q_0}    & \\frac{\\partial p_{y}}{\\partial q_1}  \\\\\n",
-    "         \\frac{\\partial \\phi_{z}}{\\partial q_0} & \\frac{\\partial \\phi_{z}}{\\partial q_1}                  \n",
+    "         \\frac{\\partial \\phi}{\\partial q_0} & \\frac{\\partial \\phi}{\\partial q_1}                  \n",
     "        \\end{array}\\right].$$\n",
     "\n",
     "As we did in class, we find each element by calculating the partial derivative of the respective task-space value with respect to the configuration-space value\n",
@@ -176,8 +189,8 @@
     "\\frac{\\partial p_{x}}{\\partial q_1} &= -l_{1}\\sin{(q_0 + q_1)} \\\\\n",
     "\\frac{\\partial p_{y}}{\\partial q_0} &= l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
     "\\frac{\\partial p_{y}}{\\partial q_1} &= l_{1}\\cos{(q_0 + q_1)} \\\\\n",
-    "\\frac{\\partial \\phi_{z}}{\\partial q_0} &= 1 \\\\\n",
-    "\\frac{\\partial \\phi_{z}}{\\partial q_1} &= 1 \n",
+    "\\frac{\\partial \\phi}{\\partial q_0} &= 1 \\\\\n",
+    "\\frac{\\partial \\phi}{\\partial q_1} &= 1 \n",
     "\\end{align}$$\n",
     "        \n",
     "resulting in\n",
@@ -188,16 +201,19 @@
     "         1                 & 1                  \n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "## Step 3: Calculate the Jacobian in your code\n",
+    "## Step 3: Computing the Jacobian\n",
     "\n",
     "We're now equipped to solve the first question by doing the following"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-15T17:34:03.690731Z",
+     "start_time": "2026-02-15T17:34:03.654091Z"
+    }
+   },
    "source": [
     "# Sample values, the particular values do not matter\n",
     "q_0 = pi / 4\n",
@@ -220,7 +236,19 @@
     ")\n",
     "\n",
     "print(f\"The analytical Jacobian at {q_0} and {q_1} is {J}\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The analytical Jacobian at 0.7853981633974483 and 1.0471975511965976 is [[-0.23801394 -0.09659258]\n",
+      " [ 0.11553945 -0.0258819 ]\n",
+      " [ 1.          1.        ]]\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -231,9 +259,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-15T17:34:03.727865Z",
+     "start_time": "2026-02-15T17:34:03.693143Z"
+    }
+   },
    "source": [
     "q_dot = np.array(\n",
     "        [[5],\n",
@@ -243,6 +274,29 @@
     "x_dot = J @ q_dot\n",
     "\n",
     "print(f\"In these conditions, x_dot = {x_dot}\")"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In these conditions, x_dot = [[-2.15599552]\n",
+      " [ 0.31887821]\n",
+      " [15.        ]]\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Suggested exercises\n",
+    "\n",
+    "1. What about if the robot had 3 degrees-of-freedom, that is RRR?\n",
+    "2. What about if the robot had n degrees-of-freedom? Would it be much more complicated to solve?\n",
+    "3. What if the robot has one or more prismatic joints?"
    ]
   }
  ],
