[L4] Explaining the second objective a bit better.

--- a/basic_lessons/lesson4_tutorial.ipynb
+++ b/basic_lessons/lesson4_tutorial.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "The DFKM is the process of calculating a Jacobian relevant for a given task. Therefore, herein we obtain the Jacobian $\\mymatrix{J}\\left(\\myvec{q}\\right)$ such that\n",
     "\n",
-    "$$\\dot{\\myvec{x}}=\\mymatrix{J} \\dot{\\myvec{q}}$$\n",
+    "$$\\dot{\\myvec{x}}=\\mymatrix{J}\\left(\\myvec{q}\\right) \\dot{\\myvec{q}}$$\n",
     "\n",
     "where \n",
     "\n",
@@ -135,7 +135,9 @@
     "\n",
     "in which $p_{x}$, $p_{y}$, and $\\phi$ are, respectively, the $x$-axis position, the $y$-axis position, and the rotation angle of $\\mathcal{F}_{2}$. Notice that $\\dot{l}_{0}=\\dot{l}_{1}=0$, because, as we defined in the previous lesson, they do not vary in time.\n",
     "\n",
-    "As defined above, the Jacobian $\\mymatrix{J}\\left(\\myvec{q}\\right)$ is a function of the configuration-space values. Therefore, when computing it, we need to know at what $\\myvec{q}$. Therefore, in this toy example, let us calculate $\\dot{\\myvec{x}}$ when\n",
+    "As defined above, the Jacobian $\\mymatrix{J}\\left(\\myvec{q}\\right)$ is a function of the configuration-space values. Therefore, when computing it, we need to know at what $\\myvec{q}$.\n",
+    "\n",
+    "As a second part of this toy example, let us calculate what is the end-effector velocity given a configuration-space velocity. Mathematically, let us calculate $\\dot{\\myvec{x}}$ when\n",
     "\n",
     "$$\\dot{\\myvec{q}} = \\left[\\begin{array}{ccc}\n",
     "         5 \\\\\n",
