[L3a] Fixing the commulative transformation.

--- a/basic_lessons/lesson3_exercise_answers.ipynb
+++ b/basic_lessons/lesson3_exercise_answers.ipynb
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T21:25:39.074771Z",
-     "start_time": "2026-02-12T21:25:39.051298Z"
+     "end_time": "2026-02-18T22:22:30.069623Z",
+     "start_time": "2026-02-18T22:22:30.051805Z"
     }
    },
    "cell_type": "code",
@@ -56,7 +56,7 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -70,8 +70,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T21:25:39.097015Z",
-     "start_time": "2026-02-12T21:25:39.084247Z"
+     "end_time": "2026-02-18T22:22:30.088377Z",
+     "start_time": "2026-02-18T22:22:30.071120Z"
     }
    },
    "cell_type": "code",
@@ -125,7 +125,7 @@
      ]
     }
    ],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -135,8 +135,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T21:25:39.108167Z",
-     "start_time": "2026-02-12T21:25:39.097442Z"
+     "end_time": "2026-02-18T22:22:30.103393Z",
+     "start_time": "2026-02-18T22:22:30.089134Z"
     }
    },
    "cell_type": "code",
@@ -174,7 +174,7 @@
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -184,8 +184,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T21:25:39.129035Z",
-     "start_time": "2026-02-12T21:25:39.111132Z"
+     "end_time": "2026-02-18T22:22:30.115953Z",
+     "start_time": "2026-02-18T22:22:30.103902Z"
     }
    },
    "cell_type": "code",
@@ -210,8 +210,9 @@
     "             [0, 1, 0],\n",
     "             [0, 0, 1]])\n",
     "\n",
+    "H = np.eye(3)\n",
     "for qi, li in zip(q, l):\n",
-    "    H = link_rotation(qi) @ link_translation(li)\n",
+    "    H = H @ link_rotation(qi) @ link_translation(li)\n",
     "\n",
     "# Printing the result is NOT a mandatory part of the answer.\n",
     "print(f\"Final answer is {H}\")"
@@ -221,13 +222,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Final answer is [[ 6.1232340e-17 -1.0000000e+00  2.4492936e-16]\n",
-      " [ 1.0000000e+00  6.1232340e-17  4.0000000e+00]\n",
-      " [ 0.0000000e+00  0.0000000e+00  1.0000000e+00]]\n"
+      "Final answer is [[-1.00000000e+00 -1.28674811e-16 -4.61803399e+00]\n",
+      " [ 1.02095262e-16 -1.00000000e+00  5.90211303e+00]\n",
+      " [ 0.00000000e+00  0.00000000e+00  1.00000000e+00]]\n"
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 4
   }
  ],
  "metadata": {
