[L4] Adding the first solution.

--- a/basic_lessons/lesson4_tutorial.ipynb
+++ b/basic_lessons/lesson4_tutorial.ipynb
@@ -45,8 +45,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-15T17:34:03.644281Z",
-     "start_time": "2026-02-15T17:34:01.946123Z"
+     "end_time": "2026-02-20T13:56:28.237129Z",
+     "start_time": "2026-02-20T13:56:24.918563Z"
     }
    },
    "source": [
@@ -71,8 +71,8 @@
      "imports"
     ],
     "ExecuteTime": {
-     "end_time": "2026-02-15T17:34:03.653107Z",
-     "start_time": "2026-02-15T17:34:03.646863Z"
+     "end_time": "2026-02-20T13:56:28.242812Z",
+     "start_time": "2026-02-20T13:56:28.237681Z"
     }
    },
    "source": [
@@ -116,7 +116,7 @@
     "\n",
     "Also remember that the configuration space of this manipulator is\n",
     "\n",
-    "$$\\myvec{q} = \\left[\\begin{array}{ccc}\n",
+    "$$\\myvec{q} = \\left[\\begin{array}{c}\n",
     "         q_0 \\\\\n",
     "         q_1\n",
     "        \\end{array}\\right].$$\n",
@@ -127,7 +127,7 @@
     "\n",
     "where \n",
     "\n",
-    "$$\\myvec{x} = \\left[\\begin{array}{ccc}\n",
+    "$$\\myvec{x} = \\left[\\begin{array}{c}\n",
     "         p_{x} \\\\\n",
     "         p_{y} \\\\\n",
     "         \\phi\n",
@@ -139,7 +139,7 @@
     "\n",
     "As a second part of this toy example, let us calculate what is the end-effector velocity given a configuration-space velocity. Mathematically, let us calculate $\\dot{\\myvec{x}}$ when\n",
     "\n",
-    "$$\\dot{\\myvec{q}} = \\left[\\begin{array}{ccc}\n",
+    "$$\\dot{\\myvec{q}} = \\left[\\begin{array}{c}\n",
     "         5 \\\\\n",
     "         10\n",
     "        \\end{array}\\right].$$\n",
@@ -212,8 +212,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-15T17:34:03.690731Z",
-     "start_time": "2026-02-15T17:34:03.654091Z"
+     "end_time": "2026-02-20T13:56:28.249591Z",
+     "start_time": "2026-02-20T13:56:28.243380Z"
     }
    },
    "source": [
@@ -263,8 +263,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-15T17:34:03.727865Z",
-     "start_time": "2026-02-15T17:34:03.693143Z"
+     "end_time": "2026-02-20T13:56:28.254889Z",
+     "start_time": "2026-02-20T13:56:28.250577Z"
     }
    },
    "source": [
