--- a/basic_lessons/lesson4_tutorial.ipynb
+++ b/basic_lessons/lesson4_tutorial.ipynb
@@ -297,8 +297,8 @@
     "# Suggested exercises\n",
     "\n",
     "1. What about if the robot had 3 degrees-of-freedom, that is RRR?\n",
-    "2. What about if the robot had n degrees-of-freedom? Would it be much more complicated to solve?\n",
-    "3. What if the robot has one or more prismatic joints?"
+    "2. What if the robot has one or more prismatic joints?\n",
+    "3. **Challenge.** What about if the robot had $n$ revolute degrees-of-freedom? Would it be much more complicated to solve?"
    ]
   }
  ],
