[L4A] Adding one example with prismatic joints.

--- a/basic_lessons/lesson4_exercise_answers.ipynb
+++ b/basic_lessons/lesson4_exercise_answers.ipynb
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-20T15:10:25.892287Z",
-     "start_time": "2026-02-20T15:10:25.874186Z"
+     "end_time": "2026-02-23T16:34:43.746333Z",
+     "start_time": "2026-02-23T16:34:43.733628Z"
     }
    },
    "cell_type": "code",
@@ -56,7 +56,7 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -94,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-20T15:10:25.906372Z",
-     "start_time": "2026-02-20T15:10:25.892785Z"
+     "end_time": "2026-02-23T16:34:43.761410Z",
+     "start_time": "2026-02-23T16:34:43.748057Z"
     }
    },
    "cell_type": "code",
@@ -154,7 +154,75 @@
      ]
     }
    ],
-   "execution_count": 64
+   "execution_count": 6
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Exercise b\n",
+    "\n",
+    "Suppose that we have a `PP` robot defined by the following transformations:\n",
+    "- a translation of $q_0$ along the $x-$axis of the base frame.\n",
+    "- a rotation of 90 degrees with respect to the current frame.\n",
+    "- a translation of $q_1$ along the $x-$axis of the current frame.\n",
+    "\n",
+    "\n",
+    "First, we calculate FKM by hand. You'll notice that it is given by the equation below.\n",
+    "$$\\mymatrix{H}^{0}_{3} = \\left[\\begin{array}{ccc}\n",
+    "         0 & -1 & q_0\\\\\n",
+    "         1 &  0 & q_1\\\\\n",
+    "         0 &  0 & 1\n",
+    "        \\end{array}\\right].$$\n",
+    "\n",
+    "We don't need to compute it explicitly, we just need the task-space values.\n",
+    "\n",
+    "$$\\begin{align}\n",
+    "p_{x}&= q_0 \\\\\n",
+    "p_{y}&= q_1 \\\\\n",
+    "\\phi&= \\frac{\\pi}{2}.\\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "Then, take the derivative to find the Jacobian.\n",
+    "\n",
+    "$$\\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
+    "         1 & 0 & 0 \\\\\n",
+    "         0 & 1 & 0\\\\\n",
+    "         0 & 0 & 0\n",
+    "        \\end{array}\\right].$$"
+   ]
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-23T16:34:43.773438Z",
+     "start_time": "2026-02-23T16:34:43.762078Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Jacobian is trivial so we don't need to compute each term separately.\n",
+    "# As you can see, in this example, it the Jacobian always has the same value.\n",
+    "J = np.array(\n",
+    "        [[1, 0, 0],\n",
+    "         [0, 1, 0],\n",
+    "         [0, 0, 0]]\n",
+    ")\n",
+    "print(f\"The analytical Jacobian is always\\n J={J}\")\n"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The analytical Jacobian is always\n",
+      " J=[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 0]]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -168,8 +236,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-20T15:10:25.918860Z",
-     "start_time": "2026-02-20T15:10:25.907159Z"
+     "end_time": "2026-02-23T16:34:43.790768Z",
+     "start_time": "2026-02-23T16:34:43.779260Z"
     }
    },
    "cell_type": "code",
@@ -265,7 +333,7 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 8
   }
  ],
  "metadata": {
